--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/4f5c7ac8-d748-4d95-b299-16bc0499e3c0/d5mptjm-ccdcaa60-e2ca-4269-b8c4-327c5fb160e8.png/v1/fill/w_890,h_897,strp/cd_png_by_geeerii_d5mptjm-fullview.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD04OTciLCJwYXRoIjoiXC9mXC80ZjVjN2FjOC1kNzQ4LTRkOTUtYjI5OS0xNmJjMDQ5OWUzYzBcL2Q1bXB0am0tY2NkY2FhNjAtZTJjYS00MjY5LWI4YzQtMzI3YzVmYjE2MGU4LnBuZyIsIndpZHRoIjoiPD04OTAifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6aW1hZ2Uub3BlcmF0aW9ucyJdfQ.v7Oouiu3Ch-MV56BcOYqI43zEIxqoy_rzW1xlz8kIAc" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Discpedia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
